# builders

./: .gitignore  Cargo.toml  README
src/: builder.rs  constructor.rs  lib.rs  util.rs
tests/: 01-parse.rs  02-create-builder.rs  03-call-setters.rs  04-call-build.rs  05-method-chaining.rs  06-optional-field.rs  07-repeated-field.rs  08-unrecognized-attribute.rs  08-unrecognized-attribute.stderr  09-redefined-prelude-types.rs  10-hash-map.rs  11-prefix.rs  12-generics.rs  13-default.rs  constructor.rs  http.rs  infallible.rs  progress.rs
